--- a/style.css
+++ b/style.css
@@ -4,15 +4,22 @@
     box-sizing: border-box;
     border: solid 1px red;
 }
+header, section, footer {
+  padding: 20px;
+}
 
 header {
     display: flex;
     padding:20px;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 30px;
 }
 ul {
     list-style: none;
+}
+li, button {
+  cursor: pointer;
 }
 
 header ul {display: none;}
@@ -20,10 +27,6 @@ header ul {display: none;}
 header ul li:not(:last-child) {
     margin-right: 20px;
 }
-
-
-
-
 
 img {
     display: block;
@@ -33,10 +36,91 @@ img {
       color: red;
   }
 
+.hamburger {
+width: 40px;
+}
+
+.hamburger img {
+max-width: 100%;
+cursor: pointer;
+}
+
+h1, p {
+  margin-bottom: 30px;
+}
+
+h1 {
+  font-size: 40px;
+}
+
+.hero h1 {
+font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+}
+.hero {
+  position: relative;
+}
+
+.hero h1, .hero p {
+max-width: 60%;
+}
+
+
+
+button {
+  background-color: white;
+  padding: 10px 30px;
+  border: solid orange 2px;
+  border-radius: 30px;
+  margin-bottom: 30px;
+}
+
+.pink-text {
+  text-transform: uppercase;
+  color: #FF3998;
+  font-weight: bold;
+}
+
+.hero img {
+  position: absolute;
+  max-width: 80%;
+  z-index: -1;
+  top: -10%;
+  right: -35%;
+}
+
+.grey-text {
+  color: #777777;
+}
+
+.upsell {
+  background-image: url("./assets/background.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.upsell h1 {
+  margin-top: 30px;
+}
+.press {
+display: flex;
+flex-wrap: wrap;
+max-width: 100%;
+}
+
+.press-logos img {
+  display: block;
+padding: 5px;
+max-width: 50%;}
+
+
+
+
   @media only screen and (min-width: 800px) {
     header ul {
       display: flex;
     }
     .hamburger {
       display: none;
-    }
+    }}
