--- a/style.css
+++ b/style.css
@@ -53,6 +53,11 @@ h1 {
   font-size: 40px;
 }
 
+h4 {
+  color: #555555;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 .hero h1 {
 font-family: Verdana, Geneva, Tahoma, sans-serif;
 
@@ -217,6 +222,26 @@ div.Green {
   right: 10%;
 }
 
+.exclusive {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+ul.icons {
+  display: flex;
+  }
+
+  .icons li {
+    margin-right: 10px;
+  }
+
+  .bottom-line {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .launching {display: none;}
       
 @media only screen and (min-width: 550px) {
 
@@ -300,4 +325,18 @@ div.Green {
     div.Green {
       display: block;
     }
+
+    .footer-upsell img {
+      position: absolute;
+      max-height: 100%;
+      top: 0;
+      right: 10%;
+    }
+    
+    .bottom-line {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .launching {display: block;}
   }
